# foxglove-ws-rs

./: .gitignore  Cargo.toml  README.md  flake.nix
foxglove-derive/: Cargo.toml
foxglove_derive/: Cargo.toml  README.md
foxglove_derive/src/: lib.rs
foxglove_trait/: Cargo.toml
foxglove_trait/src/: lib.rs
src/: lib.rs
