[package]
name = "foxglove-trait"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "A trait and derive macro for Foxglove schemas."
homepage = "https://github.com/saronic-technologies/foxglove-ws-rs"
repository = "https://github.com/saronic-technologies/foxglove-ws-rs"
readme = "README.md"

[dependencies]
foxglove_derive = { path = "foxglove_derive" }
